# ent/migrate/schema.go
@@ -382,11 +382,10 @@ var (
 		{Name: "created_at", Type: field.TypeTime},
 		{Name: "workspace_id", Type: field.TypeString, Size: 36},
 		{Name: "name", Type: field.TypeString, Size: 64},
-		{Name: "inverse_name", Type: field.TypeString, Nullable: true, Size: 64},
 		{Name: "directed", Type: field.TypeBool, Default: true},
 		{Name: "version", Type: field.TypeInt, Default: 1},
 		{Name: "metadata", Type: field.TypeJSON},
-		{Name: "type_id", Type: field.TypeString, Nullable: true, Size: 36},
+		{Name: "type_id", Type: field.TypeString, Size: 36},
 		{Name: "source_id", Type: field.TypeString, Size: 36},
 		{Name: "target_id", Type: field.TypeString, Size: 36},
 	}
@@ -398,19 +397,19 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "relationships_relationship_types_relationships",
-				Columns:    []*schema.Column{RelationshipsColumns[8]},
+				Columns:    []*schema.Column{RelationshipsColumns[7]},
 				RefColumns: []*schema.Column{RelationshipTypesColumns[0]},
-				OnDelete:   schema.SetNull,
+				OnDelete:   schema.NoAction,
 			},
 			{
 				Symbol:     "relationships_resources_outgoing",
-				Columns:    []*schema.Column{RelationshipsColumns[9]},
+				Columns:    []*schema.Column{RelationshipsColumns[8]},
 				RefColumns: []*schema.Column{ResourcesColumns[0]},
 				OnDelete:   schema.NoAction,
 			},
 			{
 				Symbol:     "relationships_resources_incoming",
-				Columns:    []*schema.Column{RelationshipsColumns[10]},
+				Columns:    []*schema.Column{RelationshipsColumns[9]},
 				RefColumns: []*schema.Column{ResourcesColumns[0]},
 				OnDelete:   schema.NoAction,
 			},
@@ -419,42 +418,32 @@ var (
 			{
 				Name:    "relationship_type_id_source_id_target_id",
 				Unique:  true,
-				Columns: []*schema.Column{RelationshipsColumns[8], RelationshipsColumns[9], RelationshipsColumns[10]},
+				Columns: []*schema.Column{RelationshipsColumns[7], RelationshipsColumns[8], RelationshipsColumns[9]},
 			},
 			{
 				Name:    "relationship_type_id_target_id",
 				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[8], RelationshipsColumns[10]},
-			},
-			{
-				Name:    "relationship_source_id_name_target_id",
-				Unique:  true,
-				Columns: []*schema.Column{RelationshipsColumns[9], RelationshipsColumns[3], RelationshipsColumns[10]},
+				Columns: []*schema.Column{RelationshipsColumns[7], RelationshipsColumns[9]},
 			},
 			{
 				Name:    "relationship_source_id_name_id",
 				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[9], RelationshipsColumns[3], RelationshipsColumns[0]},
+				Columns: []*schema.Column{RelationshipsColumns[8], RelationshipsColumns[3], RelationshipsColumns[0]},
 			},
 			{
 				Name:    "relationship_source_id_id",
 				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[9], RelationshipsColumns[0]},
+				Columns: []*schema.Column{RelationshipsColumns[8], RelationshipsColumns[0]},
 			},
 			{
 				Name:    "relationship_target_id_name_id",
 				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[10], RelationshipsColumns[3], RelationshipsColumns[0]},
+				Columns: []*schema.Column{RelationshipsColumns[9], RelationshipsColumns[3], RelationshipsColumns[0]},
 			},
 			{
 				Name:    "relationship_target_id_id",
 				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[10], RelationshipsColumns[0]},
-			},
-			{
-				Name:    "relationship_target_id_inverse_name_id",
-				Unique:  false,
-				Columns: []*schema.Column{RelationshipsColumns[10], RelationshipsColumns[4], RelationshipsColumns[0]},
+				Columns: []*schema.Column{RelationshipsColumns[9], RelationshipsColumns[0]},
 			},
 		},
 	}
@@ -508,6 +497,7 @@ var (
 		{Name: "next_revision_number", Type: field.TypeInt, Default: 1},
 		{Name: "publishing_enabled", Type: field.TypeBool, Default: false},
 		{Name: "updated_at", Type: field.TypeTime},
+		{Name: "scope_id", Type: field.TypeString, Nullable: true, Size: 36},
 		{Name: "parent_id", Type: field.TypeString, Nullable: true, Size: 36},
 		{Name: "container_id", Type: field.TypeString, Nullable: true, Size: 36},
 		{Name: "head_revision_id", Type: field.TypeString, Nullable: true, Size: 36},
@@ -522,31 +512,31 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "resources_resources_children",
-				Columns:    []*schema.Column{ResourcesColumns[12]},
-				RefColumns: []*schema.Column{ResourcesColumns[0]},
-				OnDelete:   schema.SetNull,
-			},
-			{
-				Symbol:     "resources_resources_contained_items",
 				Columns:    []*schema.Column{ResourcesColumns[13]},
 				RefColumns: []*schema.Column{ResourcesColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
-				Symbol:     "resources_item_revisions_head_revision",
+				Symbol:     "resources_resources_contained_items",
 				Columns:    []*schema.Column{ResourcesColumns[14]},
-				RefColumns: []*schema.Column{ItemRevisionsColumns[0]},
+				RefColumns: []*schema.Column{ResourcesColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
-				Symbol:     "resources_item_revisions_published_revision",
+				Symbol:     "resources_item_revisions_head_revision",
 				Columns:    []*schema.Column{ResourcesColumns[15]},
 				RefColumns: []*schema.Column{ItemRevisionsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
-				Symbol:     "resources_schema_revisions_schema_head",
+				Symbol:     "resources_item_revisions_published_revision",
 				Columns:    []*schema.Column{ResourcesColumns[16]},
+				RefColumns: []*schema.Column{ItemRevisionsColumns[0]},
+				OnDelete:   schema.SetNull,
+			},
+			{
+				Symbol:     "resources_schema_revisions_schema_head",
+				Columns:    []*schema.Column{ResourcesColumns[17]},
 				RefColumns: []*schema.Column{SchemaRevisionsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
@@ -558,19 +548,19 @@ var (
 				Columns: []*schema.Column{ResourcesColumns[2], ResourcesColumns[3], ResourcesColumns[0]},
 			},
 			{
-				Name:    "resource_workspace_id_id",
+				Name:    "resource_workspace_id_id_scope_id",
 				Unique:  false,
-				Columns: []*schema.Column{ResourcesColumns[2], ResourcesColumns[0]},
+				Columns: []*schema.Column{ResourcesColumns[2], ResourcesColumns[0], ResourcesColumns[12]},
 			},
 			{
-				Name:    "resource_parent_id_id",
+				Name:    "resource_parent_id_id_scope_id",
 				Unique:  false,
-				Columns: []*schema.Column{ResourcesColumns[12], ResourcesColumns[0]},
+				Columns: []*schema.Column{ResourcesColumns[13], ResourcesColumns[0], ResourcesColumns[12]},
 			},
 			{
 				Name:    "resource_container_id_id",
 				Unique:  false,
-				Columns: []*schema.Column{ResourcesColumns[13], ResourcesColumns[0]},
+				Columns: []*schema.Column{ResourcesColumns[14], ResourcesColumns[0]},
 			},
 		},
 	}
